[gd_scene load_steps=17 format=2]

[ext_resource path="res://world/environments/any/BlackBackground.png" type="Texture" id=1]
[ext_resource path="res://world/environments/dream/background.png" type="Texture" id=2]
[ext_resource path="res://world/characters/npcs/WalkingNPC.tscn" type="PackedScene" id=3]
[ext_resource path="res://world/characters/npcs/spirit/jabberwocky pulse orb.png" type="Texture" id=4]
[ext_resource path="res://world/environments/dream/DreamEnvironment.gd" type="Script" id=5]
[ext_resource path="res://world/utils/physics/atoms/target_detect/TargetDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/interact/InteractDialogueControl.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/camera/LimitedCamera.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]

[node name="DreamEnvironment" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="DreamBackground" type="Node2D" parent="."]

[node name="BlackBackground" type="Sprite" parent="DreamBackground"]
position = Vector2( 314.5, 91 )
scale = Vector2( 21.0313, 6.40625 )
texture = ExtResource( 1 )

[node name="Hallway" type="Sprite" parent="DreamBackground"]
modulate = Color( 1, 1, 1, 0.529412 )
position = Vector2( 0, 34 )
texture = ExtResource( 2 )
centered = false

[node name="SpiritOrb" type="AnimatedSprite" parent="."]
pause_mode = 2
position = Vector2( 545, 99 )
frames = SubResource( 7 )
frame = 2
playing = true

[node name="DreamPlayer" parent="." instance=ExtResource( 3 )]
position = Vector2( 111, 110 )
collision_layer = 2
MAX_SPEED = 20.0

[node name="LimitedCamera" parent="DreamPlayer" instance=ExtResource( 8 )]
position = Vector2( 0, 0 )

[node name="BottomRight" parent="DreamPlayer/LimitedCamera/Limits" index="1"]
position = Vector2( 640, 180 )

[node name="TargetDetectionZone" parent="." instance=ExtResource( 6 )]
position = Vector2( 549, 116 )
collision_shape = SubResource( 8 )
target_path = NodePath("../DreamPlayer")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InteractDialogueControl" parent="CanvasLayer" instance=ExtResource( 7 )]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_top = 12.0
json_path = "res://world/environments/dream/dialogue_dream.json"

[connection signal="target_entered" from="TargetDetectionZone" to="." method="_on_TargetDetectionZone_target_entered"]
[connection signal="dialogue_advance" from="CanvasLayer/InteractDialogueControl" to="." method="_on_InteractDialogueControl_dialogue_advance"]
[connection signal="dialogue_complete" from="CanvasLayer/InteractDialogueControl" to="." method="_on_InteractDialogueControl_dialogue_complete"]

[editable path="DreamPlayer/LimitedCamera"]
